# LoongDesk

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: desktop-ci.yml  release.yml
docs/: ARCHITECTURE.md  PRIVACY.md  VISUAL_ASSETS.md  release.md
e2e/: local-flow.spec.ts  tauri-driver.mjs
scripts/: windows-startup-smoke.ps1
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json  tauri.release.conf.example.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: desktop.rs  lib.rs  main.rs
src/application/: backupInspection.test.ts  backupInspection.ts  concernTools.test.ts  concernTools.ts  services.test.ts  services.ts
src/domain/: models.ts  ports.ts  schemas.test.ts  schemas.ts
src/infrastructure/: assistantProvider.ts  contentProvider.ts  desktopManager.ts  platform.ts  secretStore.ts
src/infrastructure/persistence/: index.ts  sqlitePersistence.ts  webPersistence.test.ts  webPersistence.ts
src/presentation/components/: AppShell.tsx  DropCapture.tsx  EmptyState.tsx  Modal.tsx  Onboarding.tsx
src/presentation/hooks/: useChatAutoScroll.ts
src/presentation/pages/: AssistantPage.tsx  ConcernsPage.test.tsx  ConcernsPage.tsx  DashboardPage.tsx  NewsPage.tsx  PetWindow.tsx  SettingsPage.tsx  TodosPage.tsx  v03.css
src/presentation/state/: AppContext.tsx
src/test/: setup.ts
